# ees10

./: .gitignore  CMakeLists.txt  README.md
lab1/: README.md  data.mat  important_data.mat  main.cpp
lab1/entregas/: turma-segunda.md  turma-terca.md
lab1/entregas/res/segunda/: out.csv  processamento.m  u10.mat  u15.mat  u20.mat  u25.mat  u5.mat
lab1/entregas/res/terca/: 10.mat  15.mat  20.mat  25.mat  30.mat  35.mat  40.mat  5.mat  getModel.m
lab1/material/: roteiro.xopp
lab2/: README.md  main.cpp  step_generator.slx
lab2/entregas/: README.md  turma-terca.md
lab2/entregas/res/terca/: optimizeParameters.m  plotRoots.m
lab2/entregas/res/terca/data/: K18.mat  K19.mat  K20.mat  K21.mat  K22.mat  K23.mat  K24.mat  K25.mat  K26.mat  K27.mat  K28.mat
lab2/material/: INSTALAR OPENDAC.txt  ensaio_curva_estatica.mdl
lab2/material/dados/: ME LEIA.txt  data10.mat  data15.mat  data20.mat  data25.mat  data30.mat  plotar_curva_estatica.m  step10.mat  step15.mat  step20.mat  step25.mat  step30.mat
lab2/material/roteiro/: roteiro.tex
lab3/: README.md  gabarito.xopp  main.cpp
lab3/dados/: data_u20deg.mat  data_u40deg.mat  plotar.m  signal_generator.slx  u20deg.mat  u40deg.mat
lab3/entregas/: README.md
lab3/entregas/res/terca/: getModel.m  modelos.txt  optimizeParameters.m  plotTF.m  step15.mat  step25.mat  step35.mat  step35_5.mat  step5.mat
lab3/prelab/: polos.m
lab4/: README.md  ensaio.mdl  main.cpp
lab4/entregas/: turma-terca.md
lab4/entregas/res/terca/: lab.slx  plotWave.m  testeDegPID.mat  testeDegPIDNormal.mat  teste_finaB1.mat
lab4/projeto/: projeto.m  signal_generator.slx  simulacao.mdl
lab5/: README.md  ensaio.mdl  projeto.m  simulacao.mdl
lab6/: README.md  anotacoes.xopp  ensaio.mdl
lab7/: README.md  README_bode.md
lab8/: README.md
resultados/time-1/lab-3/: README.md
resultados/time-1/lab-3/dados/: dados_20_1.mat  dados_20_2.mat  dados_20_4.mat  dados_3.mat  dados_40_1.mat  dados_40_2.mat  dados_40_4.mat
resultados/time-1/lab-4/: README.md
resultados/time-1/lab-4/dados/: analise.m  ganhos-Guilherme_Peres-Vinicius-Yan.mat  result-Pedro_A-Pedro_A-Nando-Julio.mat  result_1-Emanuel_Emily_Paulo.mat  result_1-Guilherme_Peres-Vinicius-Yan.mat  result_1-Gustavo-Renan-Valerio.mat  result_2-Emanuel_Emily_Paulo.mat  result_2-Guilherme_Peres-Vinicius-Yan.mat  result_2-Gustavo-Renan-Valerio.mat  resultados_gerais.mat
resultados/time-1/lab-6/dados/: analise-lab-6.m
resultados/time-1/lab-6/figuras/: abs600grupo1.fig  figBodeGrupo1.fig  phase600grupo1.fig
resultados/time-1/lab-7/king/: Git_King.mat  Git_King_Plot.fig
resultados/time-1/lab-7/pedros/: Git_Pedros.mat  Git_Pedros_Plot.fig
resultados/time-1/lab-7/peres/: Git_Peres.mat  Git_Peres_Plot.fig
resultados/time-1/lab-7/valerio/: Git_Renan.mat  Git_Renan_Plot.fig
resultados/time-2/lab-3/: README.md
resultados/time-2/lab-4/data/: Douglas_Pedro Pinheiro_Felipe_lab4.mat  Gabriel_Guilherme Fagundes_Lucas_lab4.mat  Shinzato_Padilha_Rodrigues_lab4.mat
resultados/time-2/lab-6/: Bode_fit_grupo15h30_EES10.fig
resultados/time-2/lab-7/Arthur_Filipe_Matheus/: Resultados_LAB7.txt
resultados/time-2/lab-7/Gabriel_GuilhermeSchwinn_Lucas/: dados.mat
resultados/time-2/lab-7/Luiz_Ricardo_Victoria/: lab7.mat
resultados/time-2/lab-7/PedroPinheiro_Douglas_Felipe/: lab7_com_degrau.mat
